# Plataforma_proyecto

./: cartCheckingList.html  login.html  mainPage.html  signIn.html  stilo.css
examen/final/: DB.py  main.py  requirements.txt
examen/parcial/: requirements.txt
examen/parcial/manageEnv/: pyproject.toml
examen/parcial/manageEnv/projecto_final/: .flake8  main.py
examen/parcial/manageEnv/projecto_final/templates/: index.html  layout.html  productForm.html
examen/parcial/manageEnv/tests/: test_manageenv.py
examen/parcial/projecto_final/: main.py
examen/parcial/projecto_final/templates/: main.html  signIn.html
tarea/formulario/: application.py
tarea/formulario/templates/: css_session.html  index.html  index_session.html  layout.html  session.html  users.html
tarea/moduleLogin/: main.py
tarea/moduleLogin/templates/: login.html  main.html
