[tool.poetry]
name = "manageEnv"
version = "0.1.0"
description = "projecto final"
authors = ["CarlosChicata <carlos.fernando.chicata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
